--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,15 +13,17 @@
   },
   "dependencies": {
     "classnames": "^2.3.2",
+    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.12.1",
     "react-router-dom": "^6.12.1",
     "react-uuid": "^2.0.0",
-    "sass": "^1.63.3"
+    "sass": "^1.63.3",
+    "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.0.20",
+    "@storybook/addon-essentials": "^7.0.22",
     "@storybook/addon-interactions": "^7.0.20",
     "@storybook/addon-links": "^7.0.20",
     "@storybook/blocks": "^7.0.20",
