--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.12.1",
     "react-uuid": "^2.0.0",
     "sass": "^1.63.3",
+    "use-debounce": "^9.0.4",
     "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
