--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,10 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.12.1",
     "react-router-dom": "^6.12.1",
+    "react-slick": "^0.29.0",
     "react-uuid": "^2.0.0",
     "sass": "^1.63.3",
+    "slick-carousel": "^1.8.1",
     "use-debounce": "^9.0.4",
     "vite-plugin-svgr": "^3.2.0"
   },
@@ -27,12 +29,14 @@
     "@storybook/addon-essentials": "^7.0.22",
     "@storybook/addon-interactions": "^7.0.20",
     "@storybook/addon-links": "^7.0.20",
+    "@storybook/addon-viewport": "^7.1.0",
     "@storybook/blocks": "^7.0.20",
     "@storybook/react": "^7.0.20",
     "@storybook/react-vite": "^7.0.20",
     "@storybook/testing-library": "^0.0.14-next.2",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
